Kubernetes/microservices/solutions/petclinic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deploy
  labels:
    app: petclinic
  namespace: petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
        app.kubernetes.io/name: petclinic
    spec:
      containers:
      - name: petclinic
        image: steve353/petclinic:1.0-nodb
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
