Kubernetes/microservices/solutions/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: petclinic
  labels:
    svc: petclinic
  namespace: petclinic
spec:
  selector: 
    app.kubernetes.io/name: petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
