Kubernetes/microservices/solutions/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "petclinic.localdomain"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: petclinic
            port:
              number: 8080
